Towards correct warping of segments in the vector layer too